test_case/rust-lang_rust/61733_716188981.rs
rust
fn foo() -> u8 {
    { 0 }

    empty!(); //~ ERROR: mismatched types
}
